<resources>
    <string name="app_name">Walid44443-Task</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_welcome">Welcome</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_explore">Explore</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_chat">Live Chat</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_wishlist">Wish List</string>
    <string name="menu_magazine">E-Magazine</string>
    <string name="action_search">Search</string>

    <string name="no_items_found">No Items Found</string>
    <string name="retry">ٌRetry</string>
    <string name="try_again_btn">Try Again</string>
    <string name="open_website">Open Website</string>
    <string name="link_development">Link Development</string>

</resources>