<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_explore"
            android:title="@string/menu_explore" />
        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/ic_menu_live"
            android:title="@string/menu_chat" />

        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_whishlist"
            android:icon="@drawable/ic_menu_wishlist"
            android:title="@string/menu_wishlist" />

        <item
            android:id="@+id/nav_magazine"
            android:icon="@drawable/ic_menu_e_magazine"
            android:title="@string/menu_magazine" />
    </group>
</menu>